tests/parsing/smtlib/v2.6/errors/104_pop_bad_num_1.expected
File "tests/parsing/smtlib/v2.6/errors/104_pop_bad_num_1.smt2", line 1, character 5-6:
1 | (pop _)
         ^
Error while parsing a pop command, read the reserved word '_',
      but expected a numeral.
